Remove things I haven't completed

--- a/bill.html
+++ b/bill.html
@@ -28,13 +28,13 @@
 <div class="slides">
 
 <section>
-<section id="slide-orgcf9c2cd">
-<h2 id="orgcf9c2cd">Bill Carlson</h2>
-<div class="outline-text-2" id="text-orgcf9c2cd">
+<section id="slide-org2c7ab52">
+<h2 id="org2c7ab52">Bill Carlson</h2>
+<div class="outline-text-2" id="text-org2c7ab52">
 </div>
 </section>
-<section id="slide-org63ae6a6">
-<h3 id="org63ae6a6">Things You Should Know</h3>
+<section id="slide-orge5ef62b">
+<h3 id="orge5ef62b">Things You Should Know</h3>
 <p>
 I live in Jacksonville - the jewel of northeast Florida
 </p>
@@ -46,36 +46,22 @@ And here is where I work:
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207148.91894738632!2d-81.6618490374342!3d30.320978070650778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e44906e6f76c73%3A0x5a8c97eb399e3afa!2sThe+Bungalow!5e0!3m2!1sen!2sus!4v1508731343221" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org084a65e">
-<h3 id="org084a65e">What Makes Me Tick?</h3>
+<section id="slide-orgbbd437e">
+<h3 id="orgbbd437e">What Makes Me Tick?</h3>
 <img src="lana.jpg" style="max-width: 30%" />
 <img src="boys.jpg" style="max-width: 40%" />
 
 </section>
-<section id="slide-orga30c382">
-<h3 id="orga30c382">Feats of Strength</h3>
+<section id="slide-org1825203">
+<h3 id="org1825203">Feats of Strength</h3>
 <img src="running.jpg" alt="running" style="max-width:30%" />
 <img src="swimming.gif" alt="swimming" style="max-width:30%" />
 <img src="jamie-bench.gif" alt="press" style="max-width:30%" />
 
 </section>
-<section id="slide-org11f898b">
-<h3 id="org11f898b">Fun</h3>
+<section id="slide-org9d467dc">
+<h3 id="org9d467dc">Fun</h3>
 <img src="parrothead.jpg" style="max-height:400px" />
-
-</section>
-<section id="slide-orge6396bd">
-<h3 id="orge6396bd">Brushes with Celebrity</h3>
-<p>
-[something about Randy]
-</p>
-
-</section>
-<section id="slide-org410aeb6">
-<h3 id="org410aeb6">Charity</h3>
-<p>
-[AFSP]
-</p>
 </section>
 </section>
 </div>
