Remove the jewel

--- a/bill.html
+++ b/bill.html
@@ -28,15 +28,15 @@
 <div class="slides">
 
 <section>
-<section id="slide-orgdcf0157">
-<h2 id="orgdcf0157">Bill Carlson</h2>
-<div class="outline-text-2" id="text-orgdcf0157">
+<section id="slide-orgc9fd09a">
+<h2 id="orgc9fd09a">Bill Carlson</h2>
+<div class="outline-text-2" id="text-orgc9fd09a">
 </div>
 </section>
-<section id="slide-org7167baa">
-<h3 id="org7167baa">Things You Should Know</h3>
+<section id="slide-orgda7ead0">
+<h3 id="orgda7ead0">Things You Should Know</h3>
 <p>
-I live in Jacksonville - the jewel of northeast Florida
+I live in Jacksonville, FL
 </p>
 
 <p>
@@ -46,24 +46,22 @@ And here is where I work:
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207148.91894738632!2d-81.6618490374342!3d30.320978070650778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e44906e6f76c73%3A0x5a8c97eb399e3afa!2sThe+Bungalow!5e0!3m2!1sen!2sus!4v1508731343221" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org4f85010">
-<h3 id="org4f85010">What Makes Me Tick?</h3>
-<img src="lana.jpg" alt="lana" style="max-width:30%" class="frag"/>
+<section id="slide-orgd7283ab">
+<h3 id="orgd7283ab">What Makes Me Tick?</h3>
+<img src="lana.jpg" alt="lana" style="max-width:30%" class="fragment"/>
 
-<img src="boys.jpg" alt="boys" style="max-width:40%" class="frag"/>
-
-</section>
-<section id="slide-org941002d">
-<h3 id="org941002d">Feats of Strength</h3>
-<img src="running.jpg" alt="running" style="max-width:30%" />
-
-<img src="swimming.gif" alt="swimming" style="max-width:30%" />
-
-<img src="jamie-bench.gif" alt="press" style="max-width:30%" />
+<img src="boys.jpg" alt="boys" style="max-width:40%" class="fragment"/>
 
 </section>
-<section id="slide-org1c85e2f">
-<h3 id="org1c85e2f">Fun</h3>
+<section id="slide-org4b2aad5">
+<h3 id="org4b2aad5">Feats of Strength</h3>
+<img src="running.jpg" alt="running" style="max-width:30%" class="fragment"/>
+<img src="swimming.gif" alt="swimming" style="max-width:30%" class="fragment"/>
+<img src="jamie-bench.gif" alt="press" style="max-width:30%" class="fragment"/>
+
+</section>
+<section id="slide-org8c94640">
+<h3 id="org8c94640">Fun</h3>
 <img src="parrothead.jpg" style="max-height:400px" />
 </section>
 </section>
