--- a/bill.html
+++ b/bill.html
@@ -28,13 +28,23 @@
 <div class="slides">
 
 <section>
-<section id="slide-orgc9fd09a">
-<h2 id="orgc9fd09a">Bill Carlson</h2>
-<div class="outline-text-2" id="text-orgc9fd09a">
+<section id="slide-orgc7d7cd0">
+<h2 id="orgc7d7cd0">Bill Carlson</h2>
+<div class="outline-text-2" id="text-orgc7d7cd0">
 </div>
 </section>
-<section id="slide-orgda7ead0">
-<h3 id="orgda7ead0">Things You Should Know</h3>
+<section id="slide-org53fe8b0">
+<h3 id="org53fe8b0">Things You Should Know</h3>
+<ul>
+<li>Been with Cotiviti 1 year, 6 days</li>
+<li>Grew up in Northern Virginia</li>
+<li>Graduated from the University of Virginia</li>
+
+</ul>
+
+</section>
+<section >
+
 <p>
 I live in Jacksonville, FL
 </p>
@@ -46,22 +56,22 @@ And here is where I work:
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207148.91894738632!2d-81.6618490374342!3d30.320978070650778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e44906e6f76c73%3A0x5a8c97eb399e3afa!2sThe+Bungalow!5e0!3m2!1sen!2sus!4v1508731343221" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-orgd7283ab">
-<h3 id="orgd7283ab">What Makes Me Tick?</h3>
+<section id="slide-orge8a68a1">
+<h3 id="orge8a68a1">What Makes Me Tick?</h3>
 <img src="lana.jpg" alt="lana" style="max-width:30%" class="fragment"/>
 
 <img src="boys.jpg" alt="boys" style="max-width:40%" class="fragment"/>
 
 </section>
-<section id="slide-org4b2aad5">
-<h3 id="org4b2aad5">Feats of Strength</h3>
+<section id="slide-orgf44b808">
+<h3 id="orgf44b808">Feats of Strength</h3>
 <img src="running.jpg" alt="running" style="max-width:30%" class="fragment"/>
 <img src="swimming.gif" alt="swimming" style="max-width:30%" class="fragment"/>
 <img src="jamie-bench.gif" alt="press" style="max-width:30%" class="fragment"/>
 
 </section>
-<section id="slide-org8c94640">
-<h3 id="org8c94640">Fun</h3>
+<section id="slide-orgb68c6de">
+<h3 id="orgb68c6de">Fun</h3>
 <img src="parrothead.jpg" style="max-height:400px" />
 </section>
 </section>
