--- a/bill.html
+++ b/bill.html
@@ -28,16 +28,15 @@
 <div class="slides">
 
 <section>
-<section id="slide-org8992503">
-<h2 id="org8992503">Bill Carlson</h2>
-<div class="outline-text-2" id="text-org8992503">
+<section id="slide-orgc07766d">
+<h2 id="orgc07766d">Bill Carlson</h2>
+<div class="outline-text-2" id="text-orgc07766d">
 </div>
 </section>
-<section id="slide-orge6e16a3">
-<h3 id="orge6e16a3">Things You Should Know</h3>
+<section id="slide-org7498b96">
+<h3 id="org7498b96">Things You Should Know</h3>
 <ul>
 <li>Been with Cotiviti 1 year, 6 days</li>
-<li>Grew up in Northern Virginia</li>
 <li>Graduated from the University of Virginia</li>
 
 </ul>
@@ -47,6 +46,10 @@ I am not artistic in any way
 
 </section>
 <section >
+
+<p>
+I grew up in Northern Virginia
+</p>
 
 <p>
 I live in Jacksonville, FL
@@ -59,23 +62,23 @@ And here is where I work:
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207148.91894738632!2d-81.6618490374342!3d30.320978070650778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e44906e6f76c73%3A0x5a8c97eb399e3afa!2sThe+Bungalow!5e0!3m2!1sen!2sus!4v1508731343221" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org9021626">
-<h3 id="org9021626">What Makes Me Tick?</h3>
+<section id="slide-org7010917">
+<h3 id="org7010917">What Makes Me Tick?</h3>
 <img src="lana.jpg" alt="lana" style="max-width:30%" class="fragment"/>
 
 <img src="boys.jpg" alt="boys" style="max-width:40%" class="fragment"/>
 
 </section>
-<section id="slide-org630febf">
-<h3 id="org630febf">Feats of Strength</h3>
+<section id="slide-orged6ae26">
+<h3 id="orged6ae26">Feats of Strength</h3>
 <img src="running.jpg" alt="running" style="max-width:30%" class="fragment"/>
 <img src="swimming.gif" alt="swimming" style="max-width:30%" class="fragment"/>
 <img src="jamie-bench.gif" alt="press" style="max-width:30%" class="fragment"/>
 
 </section>
-<section id="slide-org4884c73">
-<h3 id="org4884c73">Fun</h3>
-<img src="parrothead.jpg" style="max-height:400px" />
+<section id="slide-orga14eeb7">
+<h3 id="orga14eeb7">Fun</h3>
+<img src="parrothead.jpg" style="max-height:400px" class="fragment"/>
 </section>
 </section>
 </div>
